# rTemp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  LICENSE  PROJECT_ORGANIZATION.md  README.md  RELEASE_NOTES_v1.0.0.md  pyproject.toml  pytest.ini  rTemp_python.py  requirements-dev.txt  requirements.txt  setup.cfg
.kiro/specs/rtemp-python-complete/: design.md  requirements.md  tasks.md
docs/: API_REFERENCE.md  CONFIGURATION_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_SUMMARY.md  METHOD_SELECTION_GUIDE.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/validation/: BUG_FIXES_SUMMARY.md  COMPREHENSIVE_VALIDATION_RESULTS.md  README.md  SOLAR_RADIATION_FIX_SUMMARY.md  VALIDATION.md  VBA_COMPARISON_SUMMARY.md  VBA_VALIDATION_RESULTS.md  rTemp_VBA.basic
examples/: README.md  all_methods_demo.py  basic_usage.py  diagnostic_output_demo.py  solar_corrections_demo.py  time_varying_parameters_demo.py
examples/goldsim_integration/: DEWPOINT_ESTIMATION.md  GSPy_314.json  INPUT_ORDER.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  QUICKSTART_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md  TROUBLESHOOTING.md  WIRING_DIAGRAM.md  blog_post.html  cloud_cover_estimation.md  rtemp_goldsim_adapter.py  setup_goldsim_integration.py  validate_environment.py  verify_json_config.py
examples/output/: README.md
rtemp/: __init__.py  config.py  constants.py  model.py
rtemp/atmospheric/: __init__.py  emissivity.py  longwave.py
rtemp/heat_flux/: __init__.py  calculator.py
rtemp/solar/: __init__.py  corrections.py  position.py  radiation_bird.py  radiation_bras.py  radiation_iqbal.py  radiation_ryan.py
rtemp/utils/: __init__.py  atmospheric.py  conversions.py  validation.py
rtemp/wind/: __init__.py  adjustment.py  functions.py
tests/: __init__.py  test_infrastructure.py
tests/fixtures/: QUICKSTART_VBA_COMPARISON.md  README_VBA_COMPARISON.md  VBA_COMPARISON_NOTES.md  __init__.py  generate_vba_template.py  vba_params.csv  vba_sample_data.txt  vba_ts_input.csv  vba_ts_output.csv
tests/integration/: README_VBA_COMPARISON.md  __init__.py  test_goldsim_adapter.py  test_model_integration.py  test_vba_comparison.py
tests/property/: test_properties_atmospheric.py  test_properties_conversions.py  test_properties_heat_flux.py  test_properties_model.py  test_properties_solar.py  test_properties_validation.py  test_properties_wind.py
tests/unit/: test_atmospheric.py  test_conversions.py  test_emissivity.py  test_goldsim_adapter.py  test_heat_flux.py  test_solar_corrections.py  test_solar_position.py  test_solar_radiation.py  test_validation.py  test_wind_adjustment.py  test_wind_functions.py
tests/validation/: AZIMUTH_ISSUE_ANALYSIS.md  LONG_TERM_VALIDATION_SUMMARY.md  README.md  check_azimuth.py  check_problem_times.py  debug_azimuth_long_term.py  debug_convection.py  debug_evaporation.py  debug_longwave.py  debug_sediment.py  debug_sediment_detailed.py  debug_solar_position.py  debug_solar_radiation.py  debug_temperature_update.py  diagnose_solar_position_dec3.py  investigate_solar_radiation.py  long_term_validation.py  test_azimuth_convention.py  validate_24hr.py  vba_validation.py  verify_wind_function_formula.py
